Resolved ICE-7540. Added info icon to the documentation menu button. Aligned example with menu on the left side. Reimplemented ace:fileentry overview and validation examples. Adjusted styles for ace:accordion - overview

--- a/icefaces3/trunk/icefaces/samples/showcase/showcase/src/main/webapp/resources/css/demo_template.css
+++ b/icefaces3/trunk/icefaces/samples/showcase/showcase/src/main/webapp/resources/css/demo_template.css
@@ -192,7 +192,7 @@ a:link, a:visited {
 .example {
     float: left;
     clear: left;
-    margin-top: 6px;
+    margin-top: -5px;
     /*border: 1px solid #ECECEC; Styling preference, and %100 width hides right border*/
     width: 100%;
 }
